test/invalid-syntax/54483_missing_then/missing_then.mag
-- Author: 54483, Pedro Barata

-- Syntax error: 'if' without 'then'

fun main (_) : Unit -> Unit =
  print(if true 42 else 0)
